ros2_tutorial_workspace_2/src/log/build_2024-10-19_16-28-08/python_package_that_uses_the_library/stderr.log
  File "/home/delewlew/ros2_tutorial_workspace_2/src/install/python_package_that_uses_the_library/lib/python3.10/site-packages/python_package_that_uses_the_library/node_that_uses_the_library.py", line 5
    from python_package_with_a_library
                                      ^
SyntaxError: invalid syntax

